<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:paddingTop="15dp"
            android:id="@+id/login_tvUsername" android:layout_gravity="left|center_vertical"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/login_etUsername" android:layout_gravity="left|center_vertical" android:layout_margin="6dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:password="false"
            android:padding="10dp"
            android:id="@+id/login_tvPassword" android:layout_gravity="left|center_vertical"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_etPassword" android:layout_gravity="left|center_vertical" android:layout_margin="6dp"
            android:password="true"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_login_text"
            android:padding="10dp"
            android:id="@+id/login_btLogin" android:layout_gravity="center"/>
</LinearLayout>