<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/avatar"
            android:layout_alignLeft="@+id/tv_title"
            android:layout_below="@+id/tv_title"/>
    <TextView
            android:layout_width="63dp"
            android:layout_height="19dp"
            android:text="@string/address"
            android:id="@+id/tv_address"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="34dp"/>

    <TextView android:layout_width="63dp"
              android:layout_height="19dp"
              android:text="@string/birthday"
              android:id="@+id/tv_birthday"
              android:layout_gravity="center"
              android:layout_centerHorizontal="true"
              android:layout_below="@+id/tv_address"/>
    <TextView android:layout_width="63dp"
              android:layout_height="19dp"
              android:text="@string/online"
              android:id="@+id/tv_online"
              android:layout_gravity="center"
              android:layout_alignRight="@+id/tv_address"
              android:layout_below="@+id/tv_birthday"/>
    <TextView android:layout_width="63dp"
              android:layout_height="19dp"
              android:text="@string/gender"
              android:id="@+id/tv_gender"
              android:layout_gravity="center"
              android:layout_alignRight="@+id/tv_address"
              android:layout_below="@+id/tv_online"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:id="@+id/tv_logout"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tv_title"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_adress_value"
            android:layout_toRightOf="@+id/tv_address"
            android:layout_alignTop="@+id/tv_address"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tv_birthday_value"
              android:layout_toRightOf="@+id/tv_address"
              android:layout_below="@+id/tv_address"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tv_online_value"
              android:layout_toRightOf="@+id/tv_address"
              android:layout_below="@+id/tv_birthday"/>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/tv_gender_value"
              android:layout_toRightOf="@+id/tv_address"
              android:layout_below="@+id/tv_online"/>
    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show friend list"
            android:id="@+id/cb_show_friend_list"
            android:layout_alignLeft="@+id/tv_title" android:layout_below="@+id/rgGender"/>
    <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lv_friend_list"
            android:layout_alignParentLeft="true" android:layout_below="@+id/cb_show_friend_list"/>
    <Spinner
            android:id="@+id/spinnerAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/address"
            android:visibility="invisible"/>
    <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender"
            android:visibility="invisible"/>
    <DatePicker
            android:id="@+id/datePicker"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="invisible"/>
    <TimePicker
            android:id="@+id/timePicker"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="invisible"/>
    <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:layout_alignLeft="@+id/tv_address"
            android:layout_below="@+id/tv_gender" android:id="@+id/rgGender"
            android:visibility="gone">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:id="@+id/rbMale" android:layout_gravity="left|center_vertical"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:id="@+id/rbFemale" android:layout_gravity="left|center_vertical"/>

    </RadioGroup>

</RelativeLayout>